force-app/main/default/objects/Contact/fields/CoIT_Correo_Electronico_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Correo_Electronico_Cliente__c</fullName>
    <label>Correo Electrónico Cliente</label>
    <length>168</length>
    <type>Text</type>
</CustomField>