force-app/main/default/objects/Contact/fields/CoIT_Formula_Nombre__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Formula_Nombre__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre</label>
    <type>Text</type>
</CustomField>