force-app/main/default/objects/Contact/fields/CoIT_N_Documento__c.field-meta.xml
<CustomField>
    <fullName>CoIT_N_Documento__c</fullName>
    <label>N. Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>