force-app/main/default/objects/Contact/fields/ZZN_Documento__c.field-meta.xml
<CustomField>
    <fullName>ZZN_Documento__c</fullName>
    <label>ZZN. Documento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>